[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/enemies/explosion1.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/explosion3.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/explosion2.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/explosion4.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/explosion5.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/yadorin.png" type="Texture" id=6]
[ext_resource path="res://scenes/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Hurtbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/FollowerBadnik.gd" type="Script" id=9]
[ext_resource path="res://scenes/Followbox.tscn" type="PackedScene" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 10.0499

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 6, 57, 40, 36 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:region_enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("YadorinShape:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hurtbox/HurtboxShape:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Hitbox/HitboxShape:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("HitboxSpikes/HitboxShape:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "exploding"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YadorinShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hurtbox/HurtboxShape:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hitbox/HitboxShape:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("HitboxSpikes/HitboxShape:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "gone"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "movement"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 6, 57, 40, 36 ), Rect2( 54, 57, 40, 39 ), Rect2( 106, 57, 36, 39 ), Rect2( 6, 104, 40, 36 ), Rect2( 54, 103, 40, 39 ), Rect2( 106, 103, 35, 39 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:region_enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YadorinShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hurtbox/HurtboxShape:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HitboxSpikes/HitboxShape:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Hitbox/HitboxShape:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "exploding"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "gone"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "movement"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=11]
states/exploding/node = SubResource( 6 )
states/exploding/position = Vector2( 655, 87 )
states/gone/node = SubResource( 7 )
states/gone/position = Vector2( 869, 101 )
states/movement/node = SubResource( 8 )
states/movement/position = Vector2( 351, 101 )
transitions = [ "movement", "exploding", SubResource( 9 ), "exploding", "gone", SubResource( 10 ) ]
start_node = "movement"
end_node = "gone"

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[sub_resource type="CapsuleShape2D" id=13]
height = 4.0

[sub_resource type="CircleShape2D" id=14]
radius = 14.0

[sub_resource type="CapsuleShape2D" id=15]
radius = 1.0
height = 24.0

[sub_resource type="CircleShape2D" id=16]
radius = 137.004

[node name="Yadorin" type="KinematicBody2D"]
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
region_rect = Rect2( 6, 57, 40, 36 )

[node name="YadorinShape" type="CollisionShape2D" parent="."]
position = Vector2( 3, 9 )
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/exploding = SubResource( 3 )
anims/gone = SubResource( 4 )
anims/movement = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 12 )

[node name="Hurtbox" parent="." instance=ExtResource( 8 )]
collision_layer = 16
collision_mask = 128

[node name="HurtboxShape" parent="Hurtbox" index="0"]
position = Vector2( 4, 5 )
rotation = 1.5708
shape = SubResource( 13 )
disabled = true

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
position = Vector2( 1, 0 )
collision_layer = 32
collision_mask = 4

[node name="HitboxShape" parent="Hitbox" index="0"]
position = Vector2( 3, 6 )
shape = SubResource( 14 )
disabled = true

[node name="HitboxSpikes" parent="." instance=ExtResource( 7 )]
collision_layer = 32
collision_mask = 8

[node name="HitboxShape" parent="HitboxSpikes" index="0"]
position = Vector2( 6, -16 )
rotation = 1.5708
shape = SubResource( 15 )
disabled = true

[node name="Followbox" parent="." instance=ExtResource( 10 )]
collision_layer = 4096
collision_mask = 8192

[node name="FollowboxShape" parent="Followbox" index="0"]
shape = SubResource( 16 )

[node name="Effects" type="AudioStreamPlayer2D" parent="."]

[node name="DeleteTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Followbox" to="." method="_on_Followbox_area_entered"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_DeleteTimer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="HitboxSpikes"]
[editable path="Followbox"]
